First interaction over the code

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Legal citation verification tool - verify citations in legal briefs with detailed source checking" />
+    <meta name="theme-color" content="#4f46e5" />
     <title>Trusted Hand - Citation Verification</title>
   </head>
-  <body>
+  <body class="min-h-screen">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
